2009-09-17	Jay Foster <jay@systech.com>

	* src/dhcp_prot.c (do_dhcp): Fix packet parsing for DHCP servers
	that do not terminate the options with an END tag.

2009-06-23  Rene Schipp von Branitz Nielsen <rbn@vitesse.com>

	* src/ifaddrs.c (getifaddrs): If socket() call for IPv6 fails,
	a stray pointer was freed.

2009-03-09  John Dallaway  <john@dallaway.org.uk>

	* cdl/net.cdl: Reference test executable filenames for compatibility
	with the eCos Configuration Tool.

2008-04-13  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/server_test.c (server_test): Fix typo with atoi which
	should really be ultoa(). Cleanup to use diag_sprintf() which is
	always available. Bug reported by Grant Edwards.

2007-12-21  Oyvind Harboe <oyvind.harboe@zylin.com>

	* src/tftp_client.c, include/arpa/tftp.h, cdl/net.cdl: tftp
	blksize negotiation support. >512 byte block sizes improves tftp
	GET performance.  Switched to memcpy(), which matters for larger
	blocks.
	 
2007-01-15  Gary Thomas  <gary@mlbassoc.com>

	* src/dhcp_support.c (dhcp_mgt_entry): Better handling when restarting
	interfaces after expired lease(s).  Keep trying in case the DHCP server
	has gone down.

2007-01-09  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/manpages/net/getaddrinfo.3: Remove obsolete comment about
	not being thread-safe.

2007-01-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/dhcp_support.c: 
	* cdl/net.cdl:
	Added CDL to control the size of the stack used by
	the DHCP management thread.

2006-12-18  Sergei Gavrikov  <sg@sgs.gomel.by>

	* tests/ga_server_test.c: Updated flags argument in call of
	getnameinfo().

2006-05-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* cdl/net.cdl: Fix calculation of TFTPD stack
	size. CYGNUM_HAL_STACK_SIZE_TYPICAL is not a CDL variable, it is a
	#define, so we need to ensure that the compiler evaluates the
	expression, not the CDL library.
  
2006-03-26  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/nc_test_framework.h: 