@@ -701,6 +701,7 @@ do_dhcp(const char *intf, struct bootp *res,
     unsigned int length;
     
     cyg_uint32 xid;
+    unsigned short bp_secs;
 
 #define CHECK_XID() (  /* and other details */                                  \
     received->bp_xid   != xid            || /* not the same transaction */      \
@@ -842,7 +843,8 @@ do_dhcp(const char *intf, struct bootp *res,
             xmit->bp_htype = HTYPE_ETHERNET;
             xmit->bp_hlen = IFHWADDRLEN;
             xmit->bp_xid = xid;
-            xmit->bp_secs = cyg_current_time() / 100;
+            bp_secs = cyg_current_time() / 100;
+            xmit->bp_secs = htons(bp_secs);
             xmit->bp_flags = htons(0x8000); // BROADCAST FLAG
             bcopy(ifr.ifr_hwaddr.sa_data, &xmit->bp_chaddr, xmit->bp_hlen);
             bcopy(mincookie, xmit->bp_vend, sizeof(mincookie));
